[package]
name = "wa-dsp"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2018"
description = "complex-analyser-node backend"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#debug = true

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "*"
rustfft = "*"
console_error_panic_hook = "*"

